--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <html xmlns="http://www.w3.org/1999/xhtml">    
   <head>      
-    <title>Logy.AI | Apollo Dental</title>      
+    <title>Logy.AI | Vi IMC</title>      
     <meta http-equiv="refresh" content="0;URL='https://api.whatsapp.com/send/?phone=%2B15556006563&text=Hi+Vi'" />    
   </head>    
   <body> 
